loki-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: loki
  name: loki
  namespace: istio-system
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      io.kompose.service: loki
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: loki
    spec:
      containers:
        - args:
            - -config.file=/etc/loki/loki-config.yaml
          image: grafana/loki:2.0.0
          imagePullPolicy: IfNotPresent
          name: loki
          ports:
            - containerPort: 3100
          resources: {}
          volumeMounts:
            - mountPath: /etc/loki
              name: loki-configuration
      restartPolicy: Always
      volumes:
        - name: loki-configuration
          configMap:
            name: loki-config
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: loki
  name: loki
  namespace: istio-system
spec:
  ports:
    - name: "3100"
      port: 3100
      targetPort: 3100
  selector:
    io.kompose.service: loki
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: promtail
  name: promtail
  namespace: istio-system
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      io.kompose.service: promtail
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: promtail
    spec:
      containers:
        - args:
            - -config.file=/etc/promtail/promtail-config.yaml
          image: grafana/promtail:2.0.0
          imagePullPolicy: IfNotPresent
          name: promtail
          resources: {}
          volumeMounts:
            - name: varlog
              mountPath: /var/log
            - mountPath: /etc/promtail
              name: promtail-configuration
      restartPolicy: Always
      volumes:
        - name: varlog
          hostPath:
            path: /var/log
        - name: promtail-configuration
          configMap:
            name: promtail-config
status: {}
