changweiba-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: changweiba-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: changweiba
spec:
  hosts:
    - "*"
  gateways:
    - changweiba-gateway
  http:
    - route:
        - destination:
            host: gateway-service
            port:
              number: 8020
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: gateway-service-dr
spec:
  host: gateway-service
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
